--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,24 @@
 {
-  "files": [],
+  "extends": "@adonisjs/tsconfig/tsconfig.app.json",
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ],
+ "compilerOptions": {
+  "rootDir": "./",
+  "outDir": "./build",
+  "baseUrl": ".",
+  "paths": {
+    "@/*": ["./assets/*"],
+  },
+ },
+
+ "exclude": [
+  "node_modules",
+  "build",
+  "assets",
+  "vite.config.ts",
+  "svelte.config.ts"
+]
+
 }
